Fix tests with Gradle 9.0 and JDK17
https://youtrack.jetbrains.com/issue/IDEA-375090